<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="error_not_found">No result found. Please try again. If problem persists, try resetting your filters.</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_filters">Set Search Filters</string>
    <string name="adv_search_options">Advanced Search Option</string>
    <string name="site_filter">example.com</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="color_prompt">Select Color</string>
    <string name="size_prompt">Select Size</string>
    <string name="type_prompt">Select Type</string>
    <string name="image_size">Size Filter :</string>
    <string name="image_color">Color Filter :</string>
    <string name="img_type">Type Filter :</string>
    <string name="img_site">Site Filter :</string>
    <string name="share">Share</string>

    <string-array name="color_array">
        <item>no filter</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="size_array">
        <item>no filter</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="type_array">
        <item>no filter</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>